--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -2,18 +2,13 @@
   <div class="container">
     <!-- Hero Section -->
     <div class="row align-items-center no-gutters">
-      <div class="col-xl-5 col-lg-6 col-md-12">
+      <div class=" col-xl-12 col-lg-12 col-md-12 text-lg-right text-center">
+        <%= image_tag 'Layer 0.png', class: "img-fluid mt-2" %>
         <div class="py-2 text-center">
-          <h1 class="font-weight-semi-bold mt-3" style="color: #2DAADB;">経験のある人を探して<br>気軽に話を聞こう</h1>
-          <p class="lead" style="font-size: 16px;">意外と身近にいない○○経験者、
-          <br><span style="font-weight: bold;">Keiken</span>なら見つかるかもしれません。<br>まずは話を聞きたい経験者を探してみましょう。</p>
-          <div class="d-flex flex-column mr-8 ml-8">
-
-          </div>
+          <p class="lead" style="font-size: 16px;">意外と身近にいない○○経験者。<br class="d-sm-none" />そんなときは、<span style="font-weight: bold;">Keiken</span>で質問してみましょう。
+          <br>経験者があなたの質問に答えてくれます。</p>
         </div>
-      </div>
-      <div class=" col-xl-7 col-lg-6 col-md-12 text-lg-right text-center">
-
+        </div>
       </div>
     </div>
   </div>
