--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -12,12 +12,12 @@
               <!-- タイトル -->
               <div class="form-group col-12 col-md-12">
                 <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "あなたの経験エピソードを教えてください", class: "form-label"%>
-                <%= f.text_area :episode, id: "fname", rows: "3", class: "form-control", placeholder: "（例）大学生のときにUbar Eatsの配達員のアルバイトを2年間経験しました" %>
+                <%= f.text_area :episode, id: "fname", rows: "3", class: "form-control", placeholder: "（例）大学生のときにUbar Eatsの配達員のアルバイトを2年間経験しました（5文字以上1000文字以内）" %>
               </div>
               <!-- コンテンツ -->
               <div class="form-group col-12 col-md-12">
                 <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "質問への回答(500文字以内)", class: "form-label"%>
-                <%= f.text_area :content, autofocus: true, rows: "5", class: "form-control", placeholder: "(例)週３回１日５時間ほど働いていました。月収は平均12万円ほどでした。" %>
+                <%= f.text_area :content, autofocus: true, rows: "5", class: "form-control", placeholder: "(例)週３回１日５時間ほど働いていました。月収は平均12万円ほどでした。（5文字以上1000文字以内）" %>
               </div>
               <!-- Button -->
               <div class="col-12 text-center">
