--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -45,29 +45,31 @@
   							<form class="form-row">
   								<!-- タイトル -->
   								<div class="form-group col-12 col-md-12">
-                    <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "どのような経験者を募集しますか", class: "form-label"%>
-                    <%= f.text_field :title, id: "fname", class: "form-control", placeholder: "（例）Ubar Eatsの配達員経験者に聞きたいです。" %>
+                    <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "どのような経験者を募集しますか？", class: "form-label"%>
+                    <%= f.text_area :title, id: "fname", rows: "3", class: "form-control", placeholder: "（例）Ubar Eatsの配達員経験者に聞きたいです。(5文字以上100文字以内)" %>
   								</div>
                   <!-- コンテンツ -->
                   <div class="form-group col-12 col-md-12">
-                    <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "経験者に質問したいことはなんですか？(500文字以内)", class: "form-label"%>
-                    <%= f.text_area :content, autofocus: true, rows: "5", class: "form-control", placeholder: "(例)どのくらいの頻度で働いて平均月収どのくらいでしたか？" %>
+                    <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "経験者に質問したいことはなんですか？", class: "form-label"%>
+                    <%= f.text_area :content, autofocus: true, rows: "5", class: "form-control", placeholder: "(例)どのくらいの頻度で働いて平均月収どのくらいでしたか？(10文字以上1000文字以内)" %>
                   </div>
 									<div class="form-group col-12 col-md-12">
 										<div class="actions">
-											<span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "カテゴリ", class: "form-label"%>
-										  <select id="parent_category">
-												<option hidden>選択してください</option>
-										    <% @parent_categories.each do |c| %>
-										      <option value="<%= c.id %>"><%= c.name %></option>
-										    <% end %>
-										  </select>
-										  <select id="post_category_id" name="post[category_id]">
-												<option hidden>選択してください</option>
-										    <% @default_child_categories.each do |c| %>
-										      <option><%= c.name %></option>
-										    <% end %>
-										  </select>
+											<span class="badge badge-light-danger text-danger mr-2 mb-2">必須</span><%= f.label "カテゴリ", class: "form-label mb-1"%>
+											<div class="d-xs-sm-flex flex-xs-sm-column">
+											  <select id="parent_category">
+													<option hidden>選択してください</option>
+											    <% @parent_categories.each do |c| %>
+											      <option value="<%= c.id %>"><%= c.name %></option>
+											    <% end %>
+											  </select>
+											  <select id="post_category_id" name="post[category_id]">
+													<option hidden>選択してください</option>
+											    <% @default_child_categories.each do |c| %>
+											      <option><%= c.name %></option>
+											    <% end %>
+											  </select>
+											</div>
 										</div>
 									</div>
 									<script type="text/javascript">
